--- a/AutoSchedule.UI/Controls/AcademicCalendarItem.razor
+++ b/AutoSchedule.UI/Controls/AcademicCalendarItem.razor
@@ -2,7 +2,7 @@
     @SessionName <br/>
     @SessionType <br/>
     @SessionTime <br/>
-    @*@SessionLocation <br/>*@
+    @SessionLocation <br/>
 </div>
 
 @code {
