--- a/AutoSchedule.UI/Pages/SchedulePage.razor
+++ b/AutoSchedule.UI/Pages/SchedulePage.razor
@@ -70,6 +70,7 @@
                             <GridColumn Field=@nameof(Session.Code) HeaderText="Code" TextAlign="TextAlign.Left" Width="10%" />
                             <GridColumn Field=@nameof(Session.Instructor) HeaderText="Instructor" TextAlign="TextAlign.Left" Width="20%" />
                             <GridColumn Field=@nameof(Session.SessionTimesString) HeaderText="Time" TextAlign="TextAlign.Left" Width="45%" />
+                            @* todo: add location *@
                         </GridColumns>
                     </SfGrid>
                 </div>
