--- a/AutoSchedule.UI/Pages/SchedulePage.razor
+++ b/AutoSchedule.UI/Pages/SchedulePage.razor
@@ -5,7 +5,7 @@
 <h3 class="ms-fontSize-42 ms-fontWeight-regular">Schedules</h3>
 <br />
 @{
-    if (!DataService.initialized)  { <LoadingSpinner /> }
+    if (!DataService.Initialized)  { <LoadingSpinner /> }
     else
     {
         <div class="container">
