--- a/AutoSchedule.UI/Pages/Index.razor
+++ b/AutoSchedule.UI/Pages/Index.razor
@@ -71,6 +71,7 @@ else
                     }
                     <SfListView DataSource="@DataService.FilteredClasses"
                                 ShowHeader="false"
+                                TValue="@(string.GetHashCode())"
                                 Height="@ListBoxHeight"
                                 SortOrder="SortOrder.Ascending">
                         <ListViewEvents TValue="string"
